# py_load_spl

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FRD.md  GAP_ANALYSIS.md  NOTICE  README.md  pyproject.toml  sample_spl.xml
.github/workflows/: cd.yml  ci.yml  docker.yml
docs/: CI_CD_STRATEGY.md
src/py_load_chemb/: __init__.py  transformation.py
src/py_load_chemb/db/: base.py  postgres.py
src/py_load_faers/: acquisition.py  cli.py  parsing.py
src/py_load_spl/: __init__.py  acquisition.py  cli.py  config.py  main.py  models.py  parsing.py  s3.py  schemas.py  transformation.py  util.py
src/py_load_spl/db/: __init__.py  base.py  databricks.py  postgres.py  redshift.py  sqlite.py
src/py_load_spl/db/sql/: databricks_schema.sql  postgres_schema.sql  redshift_schema.sql  sqlite_schema.sql
tests/: redshift_schema_for_test.sql  test_acquisition.py  test_cli.py  test_cli_errors.py  test_cli_full_load_download.py  test_databricks_loader.py  test_full_pipeline.py  test_full_pipeline_errors.py  test_main.py  test_main_helpers.py  test_marketing_status_parsing.py  test_models.py  test_parquet_writer.py  test_parsing.py  test_parsing_errors.py  test_parsing_memory.py  test_parsing_vulnerabilities.py  test_postgres_loader.py  test_postgres_loader_errors.py  test_postgres_loader_optimizations.py  test_quarantine.py  test_redshift_loader.py  test_s3.py  test_spl_full.xml  test_sqlite_loader.py  test_transformation.py  test_util.py
