[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project]
name = "py-load-spl"
version = "0.1.0"
description = "An open-source Python package for FDA SPL data loading"
authors = [
    {name = "Gowtham Rao", email = "rao@ohdsi.org"},
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "lxml>=6.0.1",
    "requests>=2.32.5",
    "tenacity",
    "pydantic>=2.11.7",
    "pydantic-settings",
    "typer>=0.17.4",
    "beautifulsoup4>=4.13.5",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary"]

[project.scripts]
py-load-spl = "py_load_spl.cli:app"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = []

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests that require external services",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov",
    "testcontainers",
    "psycopg2-binary",
    "ruff>=0.12.12",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pre-commit",
    "requests-mock>=1.12.1",
    "python-json-logger>=2.0.7",
]
